--- a/barbearia.html
+++ b/barbearia.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navalha de Ouro</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -15,7 +16,7 @@
 
 <body>
 
-    <header class="navbar">
+    <header>
 
         <div id="Inicio">
             <img src="imagens/logo.png" alt="Logo Navalha de Ouro" class="logo">
@@ -27,7 +28,7 @@
             <ul class="menu">
                 <a href="#Inicio">Início</a>
                 <a href="#Sobre">Sobre</a>
-                <a href="#Barbearia">Barbearia</a>
+                <a href="#Loja">Barbearia</a>
                 <a href="#Contato">Contato</a>
             </ul>
 
@@ -35,7 +36,7 @@
 
     </header>
 
-    <section id="Sobre">
+    <section>
 
         <div>
             <img src="https://png.pngtree.com/thumb_back/fh260/background/20230612/pngtree-some-pictures-of-an-antique-barber-shop-image_2906288.jpg"
@@ -46,7 +47,7 @@
             <img src="imagens/Logo-bola.png" alt="Logo Circular" class="logo-bola">
         </div>
 
-        <h1>Quem somos</h1>
+        <h1 id="Sobre">Quem somos</h1>
         <p class="resumo-inicio">
             A Barbearia Navalha de Ouro é referência na cidade, unindo técnica tradicional e modernidade para um
             resultado
@@ -56,20 +57,23 @@
     </section>
 
     <section>
-        <div class="imagem-produto">
+        <div class="imagem-produto1">
             <img src="https://png.pngtree.com/thumb_back/fh260/background/20250112/pngtree-modern-barbershop-interior-with-empty-black-chairs-wooden-walls-and-mirrors-image_16867937.jpg"
                 alt="Imagem Barbearia">
             <div class="texto-imagem caixa1">
-                Com produtos premium e profissionais especializados,
-                oferecemos uma experiência única.
+                Acreditamos que cada homem merece um momento de cuidado pessoal onde se sinta verdadeiramente especial -
+                por isso oferecemos um ambiente acolhedor e exclusivo, completo com os melhores produtos e equipamentos
+                do mercado.
             </div>
         </div>
 
-        <div class="imagem-produto">
+        <div class="imagem-produto2">
             <img src="https://st2.depositphotos.com/3917667/11681/i/450/depositphotos_116811984-stock-photo-hipster-client-visiting-barber-shop.jpg"
                 alt="Homem fazendo a barba">
             <div class="texto-imagem caixa2">
-                Aqui, seu visual é tratado com a excelência que você merece.
+                Há mais de uma década, temos o orgulho de ser um espaço onde tradição e modernidade se encontram,
+                criando não apenas visuais impecáveis, mas experiências memoráveis. Nossos barbeiros são verdadeiros
+                artesãos
             </div>
         </div>
     </section>
@@ -79,12 +83,12 @@
     </p>
 
 
-    <h1>Barbearia</h1>
+    <h1 id="Loja">Barbearia</h1>
     <p class="mercado">
         Barba, Cabelo e Bigode é uma experiência única e na Navalha de Ouro. Nós levamos isso muito a sério:
     </p>
 
-    <div id="#Barbearia">
+    <div>
 
         <table>
             <tr>
@@ -127,7 +131,7 @@
 
     </div>
 
-    <a href="#" class="botao">Agende Seu Horário</a>
+    <button type="submit">Agende Seu Horário</button>
 
     </section>
 
@@ -153,7 +157,7 @@
             </tr>
         </table>
 
-        <a href="#" class="botao">Agende Seu Horário</a>
+        <button type="submit">Agende Seu Horário</button>
 
     </section>
 
@@ -165,26 +169,23 @@
             <input type="text" placeholder="Celular">
             <input type="email" placeholder="Email">
             <textarea placeholder="Mensagem"></textarea>
-            <button type="submit">Enviar</button>
         </form>
+
+        <button type="submit">Enviar</button>
 
     </section>
 
     <footer>
 
-        <div class="footer-grid">
+        <div class="footer-logo">
+            <img src="imagens/logo.png" alt="Logo Navalha de Ouro">
+        </div>
 
-            <div class="footer-logo">
-                <img src="LINK-DA-LOGO-AQUI" alt="Logo Navalha de Ouro">
-            </div>
+        <p>Navalha de Ouro | Todos os Direitos Reservados</p>
 
-            <p>Navalha de Ouro | Todos os Direitos Reservados</p>
-
-            <div class="redes">
-                <a href="#"><img src="LINK-ICON-INSTAGRAM" alt="Instagram"></a>
-                <a href="#"><img src="LINK-ICON-FACEBOOK" alt="Facebook"></a>
-            </div>
-
+        <div class="redes">
+            <a href="#"><img src="imagens/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="imagens/facebook.png" alt="Facebook"></a>
         </div>
 
     </footer>
