--- a/barbearia.html
+++ b/barbearia.html
@@ -61,7 +61,7 @@
             <img src="https://png.pngtree.com/thumb_back/fh260/background/20250112/pngtree-modern-barbershop-interior-with-empty-black-chairs-wooden-walls-and-mirrors-image_16867937.jpg"
                 alt="Imagem Barbearia">
             <div class="texto-imagem caixa1">
-                Acreditamos que cada homem merece um momento de cuidado pessoal onde se sinta verdadeiramente especial -
+                Acreditamos que cada homem merece um momento de cuidado pessoal onde se sinta verdadeiramente especial,
                 por isso oferecemos um ambiente acolhedor e exclusivo, completo com os melhores produtos e equipamentos
                 do mercado.
             </div>
